tests/ui/type-alias-impl-trait/reveal_local.stderr
error: cannot check whether the hidden type of `reveal_local[9507]::Foo::{opaque#0}` satisfies auto traits
  --> $DIR/reveal_local.rs:12:15
   |
LL |     is_send::<Foo>();
   |               ^^^
   |
note: opaque type is declared here
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
note: this item depends on auto traits of the hidden type, but may also be registering the hidden type. This is not supported right now. You can try moving the opaque type and the item that actually registers a hidden type into a new submodule
  --> $DIR/reveal_local.rs:9:4
   |
LL | fn not_good() {
   |    ^^^^^^^^
note: required by a bound in `is_send`
  --> $DIR/reveal_local.rs:7:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: cannot check whether the hidden type of `reveal_local[9507]::Foo::{opaque#0}` satisfies auto traits
  --> $DIR/reveal_local.rs:22:15
   |
LL |     is_send::<Foo>();
   |               ^^^
   |
note: opaque type is declared here
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
note: this item depends on auto traits of the hidden type, but may also be registering the hidden type. This is not supported right now. You can try moving the opaque type and the item that actually registers a hidden type into a new submodule
  --> $DIR/reveal_local.rs:16:4
   |
LL | fn not_gooder() -> Foo {
   |    ^^^^^^^^^^
note: required by a bound in `is_send`
  --> $DIR/reveal_local.rs:7:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 2 previous errors

